# icon

./: .cz.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.rst  MANIFEST.in  README.rst  build.py  noxfile.py  package.json  pyproject.toml  requirements-rdt.txt  requirements.txt  setup.py  test.txt
.github/workflows/: release.yaml  release.yml  unit.yaml  unit.yml
docs/: conf.py  index.rst  quickstart.rst
docs/source/: conf.py  index.rst
sphinxcontrib/: __init__.py
sphinxcontrib/icon/: __init__.py  font_handler.py  icon.py  package-lock.json  package.json
tests/: __init__.py  conftest.py  test_build.py  test_icon.py  test_src.py
tests/roots/test-fa4-icon/: index.rst
tests/roots/test-fa5-icon/: conf.py  index.rst
tests/roots/test-fa6-alias-icon/: index.rst
tests/roots/test-fa6-icon/: index.rst
tests/roots/test-fa6-wrong-icon/: index.rst
tests/roots/test-icon/: index.rst
tests/test_build/: folder_icon.html  github_icon.html  pencil_icon.html  trash_can_icon.html
